Implement @PathParam support and refactor Method and Resource utils